# titeseq-analysis

./: .gitignore  pnpm-lock.yaml  pnpm-workspace.yaml  spec-review.md  turbo.json
.changeset/: add-fitted-mean-bin-overlay.md  address-pr1-review.md  afraid-keys-give.md  beige-rice-read.md  calm-carrots-go.md  dynamic-target-antigen-label.md  empty-concentration-guard-and-dropdown.md  facs-sort-fraction-correction.md  fair-candies-kiss.md  fit-log-progress.md  graph-state-defaults.md  hide-empty-dropdown-options.md  kind-bats-open.md  logos-refresh.md  r14-dual-concentration-axes.md  scientific-slim-runenv.md  stable-mean-bin-output.md  strict-axis-match-summary-table.md  titeseq-determinism.md  titeseq-labels-machinery.md  titeseq-uv-pyproject-deps.md  titeseq-validation-and-cid-fix.md  wet-glasses-sin.md
.github/workflows/: build.yaml  mark-stable.yaml  python-tests.yaml
block/: CHANGELOG.md  package.json
docs/: description.md  test-plan.md
docs/investigations/: cid-conflict-investigation.md  concentration-axis-spec-realignment.md  sdk-pr-additional-curves-pcolumn-x.md
docs/plans/: facs-normalization-final.md
model/: CHANGELOG.md  package.json
model/src/: index.ts
software/: .coverage  CHANGELOG.md  implementation-testing-plan.md  package.json  pyproject.toml
software/scripts/: deps-export.sh
software/src/: baseline.py  classify.py  constants.py  floor_filter.py  hill_fit.py  hook_effect.py  io_layer.py  log.py  main.py  normalization.py  output_build.py  pipeline.py  pre_fit.py  requirements.txt
software/src_python/: hello.py  requirements.txt
software/tests/: TEST_PLAN_SPEC_BUGS.md  conftest.py
software/tests/data/corpus/: README.md  manifest.json  reads_antigen.parquet  reads_bin_mode.parquet  reads_no_bin_mode.parquet
software/tests/fixtures/: generate_corpus.py
software/tests/integration/: test_antigen_filter.py  test_bin_mode_pipeline.py  test_cli.py  test_corpus_e2e.py  test_determinism.py  test_no_bin_mode_pipeline.py  test_parallel_parity.py
software/tests/regression/: test_synthetic_titeseq.py
software/tests/unit/: test_baseline.py  test_classify.py  test_floor_filter.py  test_hill_fit.py  test_hook_effect.py  test_io_layer.py  test_normalization.py  test_output_build.py  test_pipeline_parallel.py  test_pre_fit.py  test_resolve_workers.py
test/: CHANGELOG.md  package.json  tsconfig.json
test/fixtures/: generate_fixtures.py  manifest.json
test/fixtures/data/antigen/: sample_ant_other_c0_b1.tsv  sample_ant_other_c0_b2.tsv  sample_ant_other_c1_b1.tsv  sample_ant_other_c1_b2.tsv  sample_ant_other_c2_b1.tsv  sample_ant_other_c2_b2.tsv  sample_ant_other_c3_b1.tsv  (+45 more)
test/src/: fixtures.ts  wf.test.ts
ui/: CHANGELOG.md  package.json
ui/src/: app.ts
ui/src/components/: PageHeader.vue  SettingsDrawer.vue  TiteseqPage.vue
ui/src/composables/: useFieldValidation.ts
ui/src/pages/: AffinityVsFitPage.vue  KDDistributionPage.vue  MainPage.vue  MeanBinPage.vue  TablePage.vue  TitrationCurvesPage.vue
workflow/: CHANGELOG.md  package.json
workflow/src/: main.tpl.tengo  wf.test.ts
(+43 files in other folders)
