[project]
name = "titeseq-analysis-calc-script"
version = "0.0.0"
requires-python = ">=3.12.0, <3.13"
# Runtime dependencies — single source of truth. These exact pins are exported to
# src/requirements.txt (top-level only) via `pnpm deps:export`, which is what pl-pkg
# builds from and what the scientific-slim runenv installs offline. Keep versions
# aligned with the wheels shipped by the runenv.
dependencies = [
    "polars-lts-cpu==1.33.1",
    "numpy==2.2.6",
    "scipy==1.15.3",
    "pyarrow==21.0.0",
]

[dependency-groups]
# Dev-only tooling (not shipped). Runtime libs live in [project.dependencies] above.
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hot_path: perf smoke tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E501", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
